test/corpus/description_edge_cases.txt
================================================================================
Param with union type and literals
================================================================================

---@param x string | 1231 | "afjfoajoi"
---@param y number | nil | false

--------------------------------------------------------------------------------

(source
  (annotation
    (comment_prefix)
    (param_annotation
      name: (param_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (basic_type
                (identifier))))
          (type
            (primary_type
              (literal_type
                (number))))
          (type
            (primary_type
              (literal_type
                (string))))))))
  (annotation
    (comment_prefix)
    (param_annotation
      name: (param_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (basic_type
                (identifier))))
          (type
            (primary_type
              (literal_type)))
          (type
            (primary_type
              (literal_type
                (boolean)))))))))

================================================================================
Return with name and description
================================================================================

---@return T myname some description here
---@return string | nil error_message

--------------------------------------------------------------------------------

(source
  (annotation
    (comment_prefix)
    (return_annotation
      (return_value
        type: (return_type_annotation
          (type_list
            (type
              (primary_type
                (basic_type
                  (identifier))))))
        name: (identifier)
        description: (description))))
  (annotation
    (comment_prefix)
    (return_annotation
      (return_value
        type: (return_type_annotation
          (type_list
            (type
              (primary_type
                (basic_type
                  (identifier))))
            (type
              (primary_type
                (literal_type)))))
        name: (identifier)))))

================================================================================
Param with description containing special chars
================================================================================

---@param config table configuration table with options
---@param callback fun() callback function to execute

--------------------------------------------------------------------------------

(source
  (annotation
    (comment_prefix)
    (param_annotation
      name: (param_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (table_type)))))
      description: (description)))
  (annotation
    (comment_prefix)
    (param_annotation
      name: (param_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (function_type)))))
      description: (description))))
