test/corpus/text_line_extra5.txt
==================
Triple dash immediately followed by @ (annotation)
==================

---@class Immediate

---

(source
  (annotation
    (comment_prefix)
    (class_annotation
      name: (identifier))))
