test/corpus/tuples.txt
==================
Basic tuple type
==================

---@type [string, number]

---

(source
  (annotation
    (comment_prefix)
    (type_annotation
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (tuple_type
                elements: (tuple_elements
                  (type_list
                    (type
                      (primary_type
                        (basic_type
                          (identifier)))))
                  (type_list
                    (type
                      (primary_type
                        (basic_type
                          (identifier))))))))))))))

==================
Triple element tuple
==================

---@type [string, number, boolean]

---

(source
  (annotation
    (comment_prefix)
    (type_annotation
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (tuple_type
                elements: (tuple_elements
                  (type_list
                    (type
                      (primary_type
                        (basic_type
                          (identifier)))))
                  (type_list
                    (type
                      (primary_type
                        (basic_type
                          (identifier)))))
                  (type_list
                    (type
                      (primary_type
                        (basic_type
                          (identifier))))))))))))))

==================
Tuple in param
==================

---@param coords [number, number]

---

(source
  (annotation
    (comment_prefix)
    (param_annotation
      name: (param_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (tuple_type
                elements: (tuple_elements
                  (type_list
                    (type
                      (primary_type
                        (basic_type
                          (identifier)))))
                  (type_list
                    (type
                      (primary_type
                        (basic_type
                          (identifier))))))))))))))

==================
Tuple in return
==================

---@return [number, string] result

---

(source
  (annotation
    (comment_prefix)
    (return_annotation
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (tuple_type
                elements: (tuple_elements
                  (type_list
                    (type
                      (primary_type
                        (basic_type
                          (identifier)))))
                  (type_list
                    (type
                      (primary_type
                        (basic_type
                          (identifier)))))))))))
      name: (identifier))))

==================
Nested tuple
==================

---@type [[string, number], boolean]

---

(source
  (annotation
    (comment_prefix)
    (type_annotation
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (tuple_type
                elements: (tuple_elements
                  (type_list
                    (type
                      (primary_type
                        (tuple_type
                          elements: (tuple_elements
                            (type_list
                              (type
                                (primary_type
                                  (basic_type
                                    (identifier)))))
                            (type_list
                              (type
                                (primary_type
                                  (basic_type
                                    (identifier))))))))))
                  (type_list
                    (type
                      (primary_type
                        (basic_type
                          (identifier))))))))))))))

==================
Tuple with trailing comma
==================

---@type [string, number,]

---

(source
  (annotation
    (comment_prefix)
    (type_annotation
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (tuple_type
                elements: (tuple_elements
                  (type_list
                    (type
                      (primary_type
                        (basic_type
                          (identifier)))))
                  (type_list
                    (type
                      (primary_type
                        (basic_type
                          (identifier))))))))))))))

==================
Tuple with union types
==================

---@type [string | nil, number | boolean]

---

(source
  (annotation
    (comment_prefix)
    (type_annotation
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (tuple_type
                elements: (tuple_elements
                  (type_list
                    (type
                      (primary_type
                        (basic_type
                          (identifier))))
                    (type
                      (primary_type
                        (literal_type))))
                  (type_list
                    (type
                      (primary_type
                        (basic_type
                          (identifier))))
                    (type
                      (primary_type
                        (basic_type
                          (identifier))))))))))))))

==================
Tuple array
==================

---@type [string, number][]

---

(source
  (annotation
    (comment_prefix)
    (type_annotation
      type: (type_annotation_value
        (type_list
          (type
            (array_type
              element: (primary_type
                (tuple_type
                  elements: (tuple_elements
                    (type_list
                      (type
                        (primary_type
                          (basic_type
                            (identifier)))))
                    (type_list
                      (type
                        (primary_type
                          (basic_type
                            (identifier)))))))))))))))
